tests/operator/wrong_add_null.rev
null + null // error: operation '+' is not allowed between types 'null' and 'null'
3 + null // error: operation '+' is not allowed between types 'int' and 'null'
null + "foo" // error: operation '+' is not allowed between types 'null' and 'str'